implement sessions for discord

--- a/docs/listener/discord-listener.yml
+++ b/docs/listener/discord-listener.yml
@@ -2,7 +2,11 @@ metadata:
   kind: discord-listener
   name: discord-isolex
 data:
-  token: !env ISOLEX_DISCORD_TOKEN
   presence:
     game:
       name: Global Thermonuclear Warfare
+  sessionProvider:
+    metadata:
+      kind: auth-controller
+      name: default-auth
+  token: !env ISOLEX_DISCORD_TOKEN
