add apollo, esModuleInterop, everything breaks

--- a/config/tsconfig.json
+++ b/config/tsconfig.json
@@ -5,6 +5,7 @@
     "allowSyntheticDefaultImports": false,
     "baseUrl": "../",
     "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
     "experimentalDecorators": true,
     "importHelpers": true,
     "jsx": "react",
