--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/cheerio": "^0.22.0",
     "@types/cron": "~1.3",
     "@types/escape-html": "^0.0.20",
+    "@types/graphql": "^14.0.3",
     "@types/js-yaml": "~3.11",
     "@types/jsonpath": "^0.2.0",
     "@types/lodash": "~4.14",
@@ -39,6 +40,7 @@
     "@types/ws": "~6.0",
     "@types/yargs-parser": "~11.0",
     "ajv": "^6.6.1",
+    "apollo-server": "^2.2.6",
     "awesome-typescript-loader": "~5.2",
     "aws-sdk": "~2.361.0",
     "bufferutil": "~4.0",
@@ -49,6 +51,7 @@
     "cron": "~1.5",
     "discord.js": "~11.4",
     "escape-html": "~1.0",
+    "graphql": "^14.0.2",
     "ineeda": "^0.12.0-alpha.0",
     "istanbul-instrumenter-loader": "~3.0",
     "js-yaml": "~3.12",
