--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@types/cheerio": "^0.22.0",
     "@types/cron": "~1.3",
     "@types/escape-html": "^0.0.20",
+    "@types/express": "^4.16.0",
+    "@types/express-graphql": "^0.6.2",
+    "@types/graphql": "^14.0.3",
     "@types/js-yaml": "~3.11",
     "@types/jsonpath": "^0.2.0",
     "@types/lodash": "~4.14",
@@ -49,6 +52,10 @@
     "cron": "~1.5",
     "discord.js": "~11.4",
     "escape-html": "~1.0",
+    "express": "^4.16.4",
+    "express-graphql": "^0.7.1",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
     "ineeda": "^0.12.0-alpha.0",
     "istanbul-instrumenter-loader": "~3.0",
     "js-yaml": "~3.12",
@@ -58,6 +65,7 @@
     "node-emoji": "~1.8",
     "noicejs": "~2.3.1",
     "nyc": "~13.1",
+    "raw-loader": "^0.5.1",
     "reflect-metadata": "^0.1.0",
     "request": "~2.88",
     "request-promise": "~4.2",
