make cc similarity detection less sensitive

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,4 +1,13 @@
 version: "2"
+
+engines:
+  duplication:
+    enabled: true
+    config:
+      languages:
+        typescript:
+          mass_threshold: 60
+
 plugins:
   fixme:
     enabled: true
