--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "node-emoji": "~1.8",
     "noicejs": "~2.3.1",
     "nyc": "~13.1",
+    "prom-client": "^11.2.0",
     "raw-loader": "^0.5.1",
     "reflect-metadata": "^0.1.0",
     "request": "~2.88",
