--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "isolex",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "isolex chat bot",
   "main": "out/main-bundle.js",
   "repository": "https://github.com/ssube/isolex",
@@ -77,6 +77,7 @@
     "sinon-chai": "~3.2",
     "source-map-support": "^0.5.0",
     "split-string": "~6.0",
+    "standard-version": "^4.4.0",
     "tslint": "~5.11",
     "tslint-clean-code": "^0.2.0",
     "tslint-consistent-codestyle": "~1.14",
