feat: replace tags with matches across parsers

--- a/docs/parser/args-parser-complete.yml
+++ b/docs/parser/args-parser-complete.yml
@@ -9,5 +9,9 @@ data:
   emit:
     noun: fragment
     verb: update
-  tags:
-    - "!!c"
+  match:
+    rules:
+      - key: body
+        operator: every
+        values:
+          - "!!c"
