--- a/docs/parser/args-parser-login.yml
+++ b/docs/parser/args-parser-login.yml
@@ -8,5 +8,9 @@ data:
   emit:
     noun: session
     verb: create
-  tags:
-    - "!!login"
+  match:
+    rules:
+      - key: body
+        operator: every
+        values:
+          - "!!login"
