--- a/docs/parser/yaml-parser.yml
+++ b/docs/parser/yaml-parser.yml
@@ -7,5 +7,5 @@ data:
       - key: body
         operator: any
         values:
-          - '!!json'
-          - '!!yaml'
+          - regexp: !regexp /!!json/
+          - regexp: !regexp /!!yaml/
