feat: make graph and metrics endpoints configurable

--- a/docs/listener/express-listener.yml
+++ b/docs/listener/express-listener.yml
@@ -2,8 +2,10 @@ metadata:
   kind: express-listener
   name: test-express
 data:
-  graph:
-    repl: true
+  expose:
+    graph: true
+    graphiql: true
+    metrics: true
   listen:
     port: 4000
     address: "0.0.0.0"
