feat: context is entity with services, replace migrations
remove a bunch of service locator/direct wiring of service dependencies
in favor of context

BREAKING CHANGE: database must be reset and migrations run again

--- a/docs/listener/express-listener.yml
+++ b/docs/listener/express-listener.yml
@@ -9,3 +9,8 @@ data:
   listen:
     port: 4000
     address: "0.0.0.0"
+  token:
+    audience: test
+    issuer: test
+    scheme: isolex
+    secret: test-secret-foo
