--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@types/mathjs": "~4.4",
     "@types/mocha": "~5.2",
     "@types/node-emoji": "~1.8",
+    "@types/passport": "^0.4.7",
+    "@types/passport-jwt": "^3.0.1",
     "@types/request": "~2.48",
     "@types/request-promise": "~4.1",
     "@types/request-promise-native": "~1.0",
@@ -63,6 +65,8 @@
     "node-emoji": "~1.8",
     "noicejs": "~2.3.3",
     "nyc": "~13.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "prom-client": "^11.2.0",
     "raw-loader": "^0.5.1",
     "reflect-metadata": "^0.1.0",
