--- a/docs/listener/slack-listener.yml
+++ b/docs/listener/slack-listener.yml
@@ -2,8 +2,10 @@ metadata:
   kind: slack-listener
   name: slack-isolex
 data:
-  token: !env ISOLEX_SLACK_TOKEN
   presence:
     game:
       name: Global Thermonuclear Warfare
-
+  sessionProvider:
+    kind: auth-controller
+    name: default-auth
+  token: !env ISOLEX_SLACK_TOKEN
