--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "request-promise-native": "~1.0",
     "rxjs": "~6.3",
     "rxjs-tslint-rules": "~4.13.0",
+    "shiro-trie": "^0.4.8",
     "sinon": "~7.1",
     "sinon-chai": "~3.3.0",
     "source-map-support": "^0.5.0",
