--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/graphql": "^14.0.3",
     "@types/js-yaml": "~3.11",
     "@types/jsonpath": "^0.2.0",
+    "@types/jsonwebtoken": "^8.3.0",
     "@types/lodash": "~4.14",
     "@types/mathjs": "~4.4",
     "@types/mocha": "~5.2",
@@ -59,6 +60,7 @@
     "ineeda": "^0.12.0-alpha.0",
     "istanbul-instrumenter-loader": "~3.0",
     "js-yaml": "~3.12",
+    "jsonwebtoken": "^8.4.0",
     "lodash": "~4.17",
     "mathjs": "~5.3.1",
     "mocha": "~5.2",
