feat: auth ctrl config for tokens

--- a/docs/controller/auth-controller.yml
+++ b/docs/controller/auth-controller.yml
@@ -1,4 +1,8 @@
 metadata:
   kind: auth-controller
   name: default-auth
-data: {}
+data:
+  token:
+    audience: [test]
+    issuer: test
+    secret: test-secret-foo
