--- a/docs/listener/express-listener.yml
+++ b/docs/listener/express-listener.yml
@@ -10,7 +10,7 @@ data:
     port: 4000
     address: "0.0.0.0"
   token:
-    audience: test
+    audience: [test]
     issuer: test
     scheme: isolex
     secret: test-secret-foo
