lint: add graph schema to express listener config, fix graph type names, misc lint

--- a/docs/listener/express-listener.yml
+++ b/docs/listener/express-listener.yml
@@ -6,6 +6,11 @@ data:
     graph: true
     graphiql: true
     metrics: true
+  graph:
+    metadata:
+      kind: graph-schema
+      name: test-express-graph
+    data: {}
   listen:
     port: 4000
     address: "0.0.0.0"
