--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,8 +45,8 @@ stages:
 .build-retag: &build-retag
   stage: image-tag
   script:
-    - docker pull ${IMAGE_SRC}
-    - docker tag ${IMAGE_SRC} ${IMAGE_DST}
+    - docker pull ${IMAGE_TAG}
+    - docker tag ${IMAGE_TAG} ${IMAGE_DST}
     - docker push ${IMAGE_DST}
 
 # build jobs
@@ -82,13 +82,12 @@ build-image:
 publish-image:
   <<: [*build-docker, *build-retag]
   stage: publish
-  only:
-    - tags
+  #only:
+  # - tags
 
   dependencies: []
   variables:
     <<: *vars-docker
-    IMAGE_SRC: ${IMAGE_TAG}
     IMAGE_DST: ssube/isolex:${CI_COMMIT_TAG}
 
 publish-npm:
