feat: add join to session ctrl (#50)

--- a/docs/controller/session-controller.yml
+++ b/docs/controller/session-controller.yml
@@ -1,4 +1,16 @@
 metadata:
   kind: session-controller
   name: default-session
-data: {}
+data:
+  join:
+    grants:
+      - grant:*
+      - join:create
+      - session:create
+    roles:
+      - user
+  token:
+    audience: [test-audience]
+    duration: 86400
+    issuer: test-issuer
+    secret: test-secret
