build: add commit status job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ stages:
   - build
   - image
   - publish
+  - status
 
 # template jobs
 
@@ -82,3 +83,19 @@ publish-npm:
     - build-node
   script:
     - npm publish
+
+# commit status
+status-github:
+  stage: status
+  script:
+    - |
+      echo <<<EOF
+      {
+          "state": "success",
+          "target_url": "${CI_PIPELINE_URL}",
+          "description": "CI pipeline success!",
+          "context": "continuous-integration/gitlab"
+      }
+      EOF | curl -d @- \
+        -H "Authorization: token $(echo ${GITHUB_SECRET} | base64 -d)" \
+        https://api.github.com/repos/ssube/isolex/statuses/${CI_COMMIT_SHA}
