build: move github commit status to script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -95,14 +95,4 @@ status-github:
   <<: [*build-curl]
   stage: status
   script:
-    - |
-      echo <<EOF
-      {
-          "state": "success",
-          "target_url": "${CI_PIPELINE_URL}",
-          "description": "CI pipeline success!",
-          "context": "continuous-integration/gitlab"
-      }
-      EOF | curl -d @- \
-        -H "Authorization: token $(echo ${GITHUB_SECRET} | base64 -d)" \
-        https://api.github.com/repos/ssube/isolex/statuses/${CI_COMMIT_SHA}
+    - ./scripts/github-status.sh
