--- a/package.json
+++ b/package.json
@@ -98,5 +98,9 @@
     "webpack-cli": "~3.1",
     "ws": "~6.1",
     "yargs-parser": "~11.1"
+  },
+  "resolutions": {
+    "**/lodash": "4.17.11",
+   "**/typescript": "3.2.2"
   }
 }
