--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@types/ws": "~6.0",
     "@types/yargs-parser": "~11.0",
     "ajv": "^6.6.2",
+    "ajv-pack": "^0.3.1",
+    "ajv-pack-loader": "^2.2.0",
     "awesome-typescript-loader": "~5.2",
     "aws-sdk": "~2.380.0",
     "bufferutil": "~4.0",
@@ -97,6 +99,7 @@
     "webpack-bundle-analyzer": "~3.0",
     "webpack-cli": "~3.1",
     "ws": "~6.1",
+    "yaml-loader": "^0.5.0",
     "yargs-parser": "~11.1"
   },
   "resolutions": {
