--- a/package.json
+++ b/package.json
@@ -43,8 +43,6 @@
     "@types/ws": "~6.0",
     "@types/yargs-parser": "~11.0",
     "ajv": "^6.6.2",
-    "ajv-pack": "^0.3.1",
-    "ajv-pack-loader": "^2.2.0",
     "awesome-typescript-loader": "~5.2",
     "aws-sdk": "~2.380.0",
     "bufferutil": "~4.0",
@@ -62,6 +60,7 @@
     "ineeda": "^0.12.0-alpha.0",
     "istanbul-instrumenter-loader": "~3.0",
     "js-yaml": "~3.12",
+    "json-loader": "^0.5.7",
     "jsonwebtoken": "^8.4.0",
     "lodash": "4.17.11",
     "mathjs": "~5.4.0",
