docs: fix db name in ref config

--- a/docs/.isolex.yml
+++ b/docs/.isolex.yml
@@ -41,4 +41,4 @@ data:
     - !include ../docs/parser/yaml-parser.yml
   storage:
     type: sqlite
-    database: "./isolex.db"
+    database: "./out/isolex.db"
