--- a/docs/isolex.yml
+++ b/docs/isolex.yml
@@ -21,6 +21,7 @@ data:
     - !include ../docs/controller/search-controller-mdn.yml
     - !include ../docs/controller/sed-controller.yml
     - !include ../docs/controller/session-controller.yml
+    - !include ../docs/controller/time-controller.yml
     - !include ../docs/controller/token-controller.yml
     - !include ../docs/controller/user-controller.yml
     - !include ../docs/controller/weather-controller-owm.yml
