feat: initial PR ctrl (#72)

--- a/config/tsconfig.json
+++ b/config/tsconfig.json
@@ -27,6 +27,7 @@
       "lodash",
       "mathjs",
       "mocha",
+      "octokit-graphql",
       "request",
       "request-promise-native",
       "sinon-chai",
