--- a/docs/controller/weather-controller-owm.yml
+++ b/docs/controller/weather-controller-owm.yml
@@ -17,4 +17,5 @@ data:
     - metadata:
         kind: flatten-transform
         name: flatten_body
-      data: {}
+      data:
+        keys: [body]
