--- a/docs/isolex.yml
+++ b/docs/isolex.yml
@@ -16,6 +16,7 @@ data:
             - isolex-test
   controllers:
     - !include ../docs/controller/completion-controller.yml
+    - !include ../docs/controller/github/pr-controller.yml
     - !include ../docs/controller/kubernetes-controller.yml
     - !include ../docs/controller/learn-controller.yml
     - !include ../docs/controller/math-controller.yml
