--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@kubernetes/client-node": "^0.7.2",
+    "@octokit/graphql": "^1.0.0",
     "@slack/client": "~4.8",
     "@types/bluebird": "~3.5.25",
     "@types/bunyan": "~1.8",
