--- a/docs/controller/github/pr-controller.yml
+++ b/docs/controller/github/pr-controller.yml
@@ -12,7 +12,7 @@ data:
         templates:
           body: >-
             {{#each data }}
-              PR#{{ number }}: {{ title }} (by {{ author.login, id: id }})
+              PR#{{ number }}: {{ title }} (by {{ author.login }})
             {{/each}}
     - metadata:
         kind: flatten-transform
