--- a/docs/isolex.yml
+++ b/docs/isolex.yml
@@ -21,6 +21,7 @@ data:
     - !include ../docs/controller/kubernetes-controller.yml
     - !include ../docs/controller/learn-controller.yml
     - !include ../docs/controller/math-controller.yml
+    - !include ../docs/controller/random-controller.yml
     - !include ../docs/controller/search-controller-mdn.yml
     - !include ../docs/controller/sed-controller.yml
     - !include ../docs/controller/session-controller.yml
