--- a/docs/controller/gitlab/ci-controller.yml
+++ b/docs/controller/gitlab/ci-controller.yml
@@ -8,13 +8,45 @@ data:
   transforms:
     - metadata:
         kind: template-transform
-        name: test-ci-template
+        name: test-ci-template-pipelines
       data:
+        filters:
+          - metadata:
+              kind: command-filter
+              name: test-ci-filter-pipelines
+            data:
+              match:
+                rules:
+                  - key: noun
+                    operator: any
+                    values:
+                      - string: gitlab-ci-pipeline
         templates:
           body: >-
             {{#each data}}
               #{{ id }} on {{ ref }} ({{ trim sha 8 "" }}): {{ status }}
             {{/each}}
+    - metadata:
+        kind: template-transform
+        name: test-ci-template-jobs
+      data:
+        filters:
+          - metadata:
+              kind: command-filter
+              name: test-ci-filter-jobs
+            data:
+              match:
+                rules:
+                  - key: noun
+                    operator: any
+                    values:
+                      - string: gitlab-ci-job
+        templates:
+          body: >-
+            {{#each data}}
+              {{ stage }} - {{ name }}: {{ status }}
+            {{/each}}
+ 
     - metadata:
         kind: flatten-transform
         name: test-ci-flatten
