docs: move token issuer/secret into env file

--- a/docs/isolex.env
+++ b/docs/isolex.env
@@ -7,4 +7,6 @@ export ISOLEX_LEX_ACCOUNT_ACCESS_KEY=""
 export ISOLEX_LEX_ACCOUNT_SECRET_KEY=""
 export ISOLEX_SLACK_TOKEN_BOT="xoxb-"
 export ISOLEX_SLACK_TOKEN_WEB="xoxp-"
+export ISOLEX_TOKEN_ISSUER=""
+export ISOLEX_TOKEN_SECRET=""
 export ISOLEX_WEATHER_API_KEY=""
