--- a/docs/controller/token-controller.yml
+++ b/docs/controller/token-controller.yml
@@ -6,5 +6,5 @@ data:
   token:
     audience: [test-audience]
     duration: 86400
-    issuer: test-issuer
-    secret: test-secret
+    issuer: !env ISOLEX_TOKEN_ISSUER
+    secret: !env ISOLEX_TOKEN_SECRET
