feat: enable schema defaults and remove extra props, fix schema for reference config

--- a/docs/controller/session-controller.yml
+++ b/docs/controller/session-controller.yml
@@ -9,6 +9,7 @@ data:
       - session:create
     roles:
       - user
+  transforms: []
   token:
     audience: [test-audience]
     duration: 86400
