fix: update learn ctrl to use named data

--- a/docs/parser/split-parser-learn.yml
+++ b/docs/parser/split-parser-learn.yml
@@ -3,9 +3,9 @@ metadata:
   name: default-learn
 data:
   dataMapper:
-    take: [noun, verb]
+    take: [keyword, future-noun, future-verb]
     skip: 0
-    rest: args
+    rest: body
   every: false
 
   preferData: false
