fix: use named data in math ctrl, add to getting started

--- a/docs/isolex.yml
+++ b/docs/isolex.yml
@@ -46,6 +46,7 @@ data:
     - !include ../docs/parser/args-parser-k8s.yml
     - !include ../docs/parser/lex-parser.yml
     - !include ../docs/parser/split-parser-learn.yml
+    - !include ../docs/parser/split-parser-math.yml
     - !include ../docs/parser/yaml-parser.yml
   storage:
     type: sqlite
