--- a/docs/isolex.yml
+++ b/docs/isolex.yml
@@ -47,6 +47,7 @@ data:
     - !include ../docs/parser/lex-parser.yml
     - !include ../docs/parser/split-parser-learn.yml
     - !include ../docs/parser/split-parser-math.yml
+    - !include ../docs/parser/split-parser-sed.yml
     - !include ../docs/parser/yaml-parser.yml
   storage:
     type: sqlite
