feat: tick entity for interval to consume, add intervals to schema

--- a/docs/isolex.yml
+++ b/docs/isolex.yml
@@ -30,6 +30,8 @@ data:
     - !include ../docs/controller/token-controller.yml
     - !include ../docs/controller/user-controller.yml
     - !include ../docs/controller/weather-controller-owm.yml
+  intervals:
+    - !include ../docs/interval/command-interval.yml
   listeners:
     - !include ../docs/listener/discord-listener.yml
     - !include ../docs/listener/express-listener.yml
