feat: send msg to ctx target (#87), use target in intervals (#88)

--- a/docs/interval/command-interval.yml
+++ b/docs/interval/command-interval.yml
@@ -5,5 +5,14 @@ data:
   defaultCommand:
     noun: time
     verb: get
+  defaultContext:
+    channel:
+      id: foo
+      thread: bar
+    name: svc
+    target:
+      kind: discord-listener
+      name: test-discord
+    uid: svc
   frequency:
     zeit: 30 seconds
