fix: notify services of tick event (#88)

--- a/docs/interval/command-interval.yml
+++ b/docs/interval/command-interval.yml
@@ -7,8 +7,8 @@ data:
     verb: get
   defaultContext:
     channel:
-      id: foo
-      thread: bar
+      id: "440715367019446274"
+      thread: ""
     name: svc
     target:
       kind: discord-listener
