feat: add default target to completion ctrl (#87)

--- a/docs/controller/completion-controller.yml
+++ b/docs/controller/completion-controller.yml
@@ -2,5 +2,8 @@ metadata:
   kind: completion-controller
   name: default-completion
 data:
+  defaultTarget:
+    kind: discord-listener
+    name: test-discord
   filters: []
   transforms: []
