--- a/docs/interval/command-interval.yml
+++ b/docs/interval/command-interval.yml
@@ -10,9 +10,9 @@ data:
       id: "440715367019446274"
       thread: ""
     name: svc
-    target:
-      kind: discord-listener
-      name: test-discord
     uid: svc
+  defaultTarget:
+    kind: discord-listener
+    name: test-discord
   frequency:
     zeit: 30 seconds
