--- a/docs/isolex.yml
+++ b/docs/isolex.yml
@@ -33,6 +33,7 @@ data:
   intervals:
     - !include ../docs/interval/command-interval.yml
     - !include ../docs/interval/event-interval.yml
+    - !include ../docs/interval/message-interval.yml
   listeners:
     - !include ../docs/listener/discord-listener.yml
     - !include ../docs/listener/express-listener.yml
