--- a/docs/listener/express-listener.yml
+++ b/docs/listener/express-listener.yml
@@ -2,6 +2,9 @@ metadata:
   kind: express-listener
   name: test-express
 data:
+  defaultTarget:
+    kind: discord-listener
+    name: test-discord
   expose:
     graph: true
     graphiql: true
