fix: rename session ctrl to account, join noun to account

--- a/docs/controller/account-controller.yml
+++ b/docs/controller/account-controller.yml
@@ -1,6 +1,6 @@
 metadata:
-  kind: session-controller
-  name: default-session
+  kind: account-controller
+  name: default-account
 data:
   join:
     grants:
