--- a/docs/interval/message-interval.yml
+++ b/docs/interval/message-interval.yml
@@ -16,3 +16,19 @@ data:
     name: test-discord
   frequency:
     time: 30 seconds
+  transforms:
+    - metadata:
+        kind: template-transform
+        name: test-interval-msg-template
+      data:
+        templates:
+          body: >
+            Hello from {{ data.createdAt }}!
+    - metadata:
+        kind: flatten-transform
+        name: test-interval-msg-flatten
+      data:
+        args:
+          deep: false
+          join: " "
+          take: [$.data.body]
