--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/express": "4.16.0",
     "@types/express-graphql": "0.6.2",
     "@types/graphql": "14.0.4",
+    "@types/i18next": "^12.1.0",
     "@types/js-yaml": "3.11",
     "@types/jsonpath": "0.2.0",
     "@types/jsonwebtoken": "8.3.0",
@@ -56,6 +57,7 @@
     "express-graphql": "0.7.1",
     "graphql": "14.0.2",
     "graphql-tag": "2.10.0",
+    "i18next": "^13.1.0",
     "ineeda": "0.12.0-alpha.0",
     "istanbul-instrumenter-loader": "3.0",
     "js-yaml": "3.12",
